app-load-balancer/1-vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = var.i_vpc.cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.i_name_app}-vpc"
  }
}
