app-load-balancer/6-1-security-group-ingress-ec2.tf
resource "aws_security_group_rule" "ingress_ec2_traffic" {
  type                     = "ingress"
  from_port                = 8080
  to_port                  = 8080
  protocol                 = "tcp"
  security_group_id        = aws_security_group.ec2_aps1.id
  source_security_group_id = aws_security_group.alb_aps1.id
}

resource "aws_security_group_rule" "ingress_ec2_health_check" {
  type                     = "ingress"
  from_port                = 8081
  to_port                  = 8081
  protocol                 = "tcp"
  security_group_id        = aws_security_group.ec2_aps1.id
  source_security_group_id = aws_security_group.alb_aps1.id
}
